--- a/gb/19/10/24/n11610557.md
+++ b/gb/19/10/24/n11610557.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/okxz2368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/okxz2368/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/okxz2368/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>帮派犯罪飙升 多伦多街头帮派大解析</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/shutterstock_142478245-600x400.jpg" />
 <h6>警方表示，多伦多街头枪案飙升，其中多半是这类帮派枪战火拼。数据显示，多伦多今年枪案有创历史新高趋势。（Shuterstock)
 </h6>
 <hr>
-	<p>【大纪元2019年10月25日讯】（大纪元记者李平编译<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A.md#1">多伦多</a>报导）近年媒体多伦多新闻报导中，充斥枪案和<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E5%B8%AE%E6%B4%BE%E7%8A%AF%E7%BD%AA.md#1">帮派犯罪</a>，市府、政客和警方为之头痛，但又似乎束手无策。对枪支、<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E8%A1%97%E5%A4%B4%E5%B8%AE%E6%B4%BE.md#1">街头帮派</a>和相关解决办法，普通老百姓到底了解多少呢？《<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A.md#1">多伦多</a>星报》最新文章对这一问题进行深度和全面剖析。</p>
+	<p>【大纪元2019年10月25日讯】（大纪元记者李平编译<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A.md#1">多伦多</a>报导）近年媒体多伦多新闻报导中，充斥枪案和<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B8%AE%E6%B4%BE%E7%8A%AF%E7%BD%AA.md#1">帮派犯罪</a>，市府、政客和警方为之头痛，但又似乎束手无策。对枪支、<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%A1%97%E5%A4%B4%E5%B8%AE%E6%B4%BE.md#1">街头帮派</a>和相关解决办法，普通老百姓到底了解多少呢？《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A.md#1">多伦多</a>星报》最新文章对这一问题进行深度和全面剖析。</p>
 <h2>帮派火拼致枪案飙升</h2>
 <p>去年春季的一个下午，2名年轻男子坐大众车来到多伦多市中心Parliament街，下车后掏枪对着人群开枪，行人惊慌四散逃离，事后枪手上车被蒙面同伙驱车逃离，警车在后紧追不舍。幸运的是，枪案中无人受伤。</p>
 <p>警方表示，多伦多街头枪案飙升，其中多半是这类帮派枪战火拼。数据显示，多伦多今年枪案有创历史新高趋势。警方透露，年初截至10月中旬，多市枪案伤亡人数总计210人，比2014年同期多82人，同期枪案伤亡人数自2004年以来最高。其中多数伤亡与帮派有关，但也有一些无辜市民。</p>
 <p>多伦多警方枪支与帮派工作组组长马修斯（Joe Matthews）警官透露，多伦多绝大多数枪案与帮派有关，极少数和帮派无关。</p>
 <p>市府和警方都发誓，要追加人力物力遏制非法帮派活动，但要真正解决问题，谈何容易？</p>
-<p>今年夏季连续多起枪案后，警方发起一个为期11周的Project Community Space社区帮派情报活动。事后多伦多警察局长桑德斯（Mark Saunders）表示，警方会调整做法，加强<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E8%A1%97%E5%A4%B4%E5%B8%AE%E6%B4%BE.md#1">街头帮派</a>打击。本月初，市议会在省和联邦两级政府300万的拨款基础上，又投票追加警方拨款150万专门用于打击枪支犯罪。</p>
+<p>今年夏季连续多起枪案后，警方发起一个为期11周的Project Community Space社区帮派情报活动。事后多伦多警察局长桑德斯（Mark Saunders）表示，警方会调整做法，加强<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%A1%97%E5%A4%B4%E5%B8%AE%E6%B4%BE.md#1">街头帮派</a>打击。本月初，市议会在省和联邦两级政府300万的拨款基础上，又投票追加警方拨款150万专门用于打击枪支犯罪。</p>
 <p>有人认为要加强社区治安，关键是拨款给社区项目，而非一味追加警力拨款。但桑德斯不以为然。</p>
 <h2>多伦多帮派现代化</h2>
 <p>如今的帮派团伙，不仅在街头活跃，在网上也很活跃，线上的争执和挑衅极易升级，从而引发街头暴力。帮派，是指3人以上组成的团伙。多伦多警方2018年帮派报告称，现代用法中，帮派通常是指犯罪团伙犯罪组织。多伦多街头帮派通常是男子团伙，其中许多帮派成员打小就混在一起。</p>
@@ -22,7 +22,7 @@
 <p>今年6月全国帮派研讨会总结认为，街头帮派中，有许多发展成公认的犯罪组织，他们大肆利用网络无国界和不受监管的便利条件，从事暴利网络犯罪活动，造成无以计量的伤害。马修斯表示，敌对帮派成员之间在社交媒体上互相叫骂和威胁，最后都会演变成街头现实火拼。</p>
 <p>多伦多现年40岁居民威尔森（Marcell Wilson），年轻时曾是多伦多西区多个帮派头子，出入总是带枪，目前是One on One非盈利组织联合创办人兼执行主管，专门致力于社区安全与居民安全。</p>
 <p>他透露，当年的帮派和如今的帮派完全不同，以前入伙一个帮派，得搬到那个帮派的地盘，大家都是面对面，不像现在的帮派小年轻在网上沟通。以前的帮派成员都是地下活动，谁最能避开警方视线，谁最令人服气。现在的帮派小年轻公然在网上吆喝，令他有些不解。</p>
-<p>如今检察机构，多是通过手机短信、视频或社交媒体上的帖子内容等证据，对<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E5%B8%AE%E6%B4%BE%E7%8A%AF%E7%BD%AA.md#1">帮派犯罪</a>活动指控或定罪。去年11月，高级法院通过帮派之间的多个枪战火拼视频，判处多伦多Monstarz帮派头子当克利（Jermaine Dunkley）杀人罪名成立。</p>
+<p>如今检察机构，多是通过手机短信、视频或社交媒体上的帖子内容等证据，对<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B8%AE%E6%B4%BE%E7%8A%AF%E7%BD%AA.md#1">帮派犯罪</a>活动指控或定罪。去年11月，高级法院通过帮派之间的多个枪战火拼视频，判处多伦多Monstarz帮派头子当克利（Jermaine Dunkley）杀人罪名成立。</p>
 <p>上述案件中，警方认为起因是对方帮派有人在网上发视频，挑衅当克利是否有胆到他们地盘上走一走，随后当克利发视频显示他大摇大摆地在对方地盘上遛弯，最后线上挑衅变成线下火拼。</p>
 <h2>帮派枪战越来越肆无忌惮</h2>
 <p>和过去帮派不同的是，如今的帮派枪击，都选择白天，也不在乎目标，谁被射中谁倒楣。威尔森说，过去帮派之间枪战，都是帮派之间私下解决，尽量不引起公众和警方注意。现在的帮派就是在有他人在场情况下，枪杀对手。也就是说，无论对手是否和母亲或孩子坐公交，或在高速，或在商场，或学校或公园，只要对方也有枪，就要当场开火，至于到底射中谁，不重要。</p>
@@ -53,36 +53,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/18/1/10/n10043397.md#1">墨尔本非裔帮派犯罪频发 成大选关键议题</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/18/1/12/n10052161.md#1">墨尔本非裔帮派犯罪酿政治风暴 政府考虑建情报系统</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/18/7/25/n10587863.md#1">墨尔本女孩遭捅伤身亡 非裔帮派犯罪再引关注</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/19/3/5/n11090327.md#1">打击卑诗省帮派犯罪 联邦拨款530万</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/1/10/n10043397.md#1">墨尔本非裔帮派犯罪频发 成大选关键议题</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/1/12/n10052161.md#1">墨尔本非裔帮派犯罪酿政治风暴 政府考虑建情报系统</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/7/25/n10587863.md#1">墨尔本女孩遭捅伤身亡 非裔帮派犯罪再引关注</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/3/5/n11090327.md#1">打击卑诗省帮派犯罪 联邦拨款530万</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/12/n11038748.md#1" target="_blank">邢诒心：作为地主崽的童年</a></li><li><a href="https://github.com/okxz2368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/8/n10699044.md#1" target="_blank">美国女学者修炼奇缘(上) 脱胎换骨的改变</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/2/n11084381.md#1" target="_blank">林辉：中共这些“特别党员”效力后自取其辱</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11247031.md#1" target="_blank">加拿大渥太华市长连续9年宣布 法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12076958.md#1">【拍案惊奇】朝媒报金正恩现身 习家邓家对呛？</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076815.md#1">【新闻看点】美连6大动作 美中角力升级</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076867.md#1">朝媒报金正恩现身竣工典礼 川普拒置评</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12078341.md#1">金正恩若突垮台 美将启动“不可能的任务”</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12075345.md#1">流浪猫妈妈带小猫上医院获得帮助 网友赞爆</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12078172.md#1">范冰冰被堵绝财路？传遭广电总局禁直播卖货</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073796.md#1">否认与刘亦菲复合 宋承宪：手滑导致按赞帖文</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12074176.md#1">台湾歌手大支再推新歌 呼吁向中共追责</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12074853.md#1">《危险谎言》影评：意外之财 反而是挑战开始</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/2/25/n11893623.md#1">【命理】他为何由相信命运变成不相信命运？</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073552.md#1">一生波折难掩其风华 东汉才女蔡文姬</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073149.md#1">“留白”的艺术与人生</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/24/n12058913.md#1">托马斯·杰弗逊撰写独立宣言</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/24/n12059149.md#1">星孛与人事遥相呼应 并非浪得虚名</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/okxz2368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/okxz2368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/24/n11610557.htm">帮派犯罪飙升 多伦多街头帮派大解析</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/24/n11610557.htm">帮派犯罪飙升 多伦多街头帮派大解析</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/okxz2368/djy/blob/master/gb/19/10/24/n11610557.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/okxz2368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/okxz2368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/okxz2368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/10/24/n11610557.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
